--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="Design.css">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 
@@ -31,11 +31,13 @@
             <input type="color" id="color">
         </div>
         <div class="input-group">
-            <label for="size">Size:</label>
+            <label for="size">Size</label>
             <input type="number" id="size" min="1" max="100">
         </div>
         <button id="addTextBox">Add Text Box</button>
         </div>
+        <button id="undo" onclick="undo()"><i class="material-icons">undo</i>Undo</button>
+        <button id="redo" onclick="redo()">Redo<i class="material-icons">redo</i></button>
    <script src="script.js"></script>
 </body>
 </html>      
